<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YakYik</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="message_label">Message</string>
    <string name="upvote_label">Upvote</string>
    <string name="default_score">0</string>
    <string name="downvote_label">Downvote</string>
    <string name="default_posted_time">Posted now</string>
    <string name="title_activity_post_message">Post a New Message</string>
    <string name="message_hint">Type your message here</string>
    <string name="author_hint">(Optional) Name</string>
    <string name="submit_label">Post</string>
    <string name="post_fail_message">Failed to post your message. Please try again!</string>
    <string name="location_not_found_message">Still waiting on your location. Please try again!</string>
    <string name="action_post_message">Post Message</string>
    <string name="action_refresh">Refresh</string>
    <string name="message_required_message">Please enter a message!</string>
    <string name="vote_fail_message">Failed to vote on that message. Please try again!</string>

</resources>
